--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+
+.node rect {
+  cursor: pointer;
+  fill: #fff;
+  fill-opacity: .5;
+  stroke: #3182bd;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font: 10px sans-serif;
+  pointer-events: none;
+}
+
+path.link {
+  fill: none;
+  stroke: #9ecae1;
+  stroke-width: 1.5px;
+}
+
+</style>
+
   <title>Big Data Project 1</title>
 
   <!-- META/CSS Start -->
@@ -42,6 +65,30 @@
         </div>
     </div>
 
+    <div class="row well" style="margin-top: 20px;">
+        <div class="col-md-12">
+            <h1 style="border-bottom: 1px solid dimgray;">Task 4</h1>
+            <p id="task4Text" style="font-size: 1.8rem"></p>
+            <div id="graph4"></div>
+        </div>
+    </div>
+
+    <div class="row well" style="margin-top: 20px;">
+        <div class="col-md-12">
+            <h1 style="border-bottom: 1px solid dimgray;">Task 5</h1>
+            <p id="task5Text" style="font-size: 1.8rem"></p>
+            <div id="graph5"></div>
+        </div>
+    </div>
+
+    <div class="row well" style="margin-top: 20px;">
+        <div class="col-md-12">
+            <h1 style="border-bottom: 1px solid dimgray;">Task 6</h1>
+            <p id="task6Text" style="font-size: 1.8rem"></p>
+            <div id="graph6"></div>
+        </div>
+    </div>
+
 </div>
 
 <!-- Scripts Start -->
@@ -52,11 +99,11 @@
 <script src="d3.layout.cloud.js"></script>
 <script src="d3.wordcloud.js"></script>
 <script src="results/task1.js"></script>
-<!--<script src="results/task2.js"></script>-->
+<script src="results/task2.js"></script>
 <script src="results/task3.js"></script>
-<!--<script src="results/task4.js"></script>
+<script src="results/task4.js"></script>
 <script src="results/task5.js"></script>
-<script src="results/task6.js"></script>-->
+<script src="results/task6.js"></script>
 
 <script>
   $(function() {
@@ -71,8 +118,6 @@
         index++;
         text += item.text + ": " + item.size + ", ";
     });
-    
-    console.log(task1Data);
     
     d3.wordcloud()
         .size([800, 800])
@@ -146,6 +191,167 @@
       "font-size": 13,
       "dy": 6
     });
+
+    //Task 4 presentation
+    var margin = {top: 30, right: 20, bottom: 30, left: 20},
+    width = 960 - margin.left - margin.right,
+    barHeight = 20,
+    barWidth = width * .8;
+
+var i = 0,
+    duration = 400,
+    root;
+
+var tree = d3.layout.tree()
+    .nodeSize([0, 20]);
+
+var diagonal = d3.svg.diagonal()
+    .projection(function(d) { return [d.y, d.x]; });
+
+var svg = d3.select("#graph4").append("svg")
+    .attr("width", width + margin.left + margin.right)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+jsonTest.x0 = 0;
+  jsonTest.y0 = 0;
+  update(root = jsonTest, "#graph4 > svg");
+
+
+    //Task 5 presentation
+var svg = d3.select("#graph5").append("svg")
+    .attr("width", width + margin.left + margin.right)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+task5Data.x0 = 0;
+  task5Data.y0 = 0;
+  update(root = task5Data, "#graph5 > svg");
+
+    //Task 6 presentation
+
+    var svg = d3.select("#graph6").append("svg")
+    .attr("width", width + margin.left + margin.right)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+task6Data.x0 = 0;
+  task6Data.y0 = 0;
+  update(root = task6Data, "#graph6 > svg");
+
+
+function update(source, selector) {
+
+  // Compute the flattened node list. TODO use d3.layout.hierarchy.
+  var nodes = tree.nodes(root);
+
+  var height = Math.max(500, nodes.length * barHeight + margin.top + margin.bottom);
+
+  d3.select(selector).transition()
+      .duration(duration)
+      .attr("height", height);
+
+  d3.select(self.frameElement).transition()
+      .duration(duration)
+      .style("height", height + "px");
+
+  // Compute the "layout".
+  nodes.forEach(function(n, i) {
+    n.x = i * barHeight;
+  });
+
+  // Update the nodes…
+  var node = svg.selectAll("g.node")
+      .data(nodes, function(d) { return d.id || (d.id = ++i); });
+
+  var nodeEnter = node.enter().append("g")
+      .attr("class", "node")
+      .attr("transform", function(d) { return "translate(" + source.y0 + "," + source.x0 + ")"; })
+      .style("opacity", 1e-6);
+
+  // Enter any new nodes at the parent's previous position.
+  nodeEnter.append("rect")
+      .attr("y", -barHeight / 2)
+      .attr("height", barHeight)
+      .attr("width", barWidth)
+      .style("fill", color)
+      .on("click", click);
+
+  nodeEnter.append("text")
+      .attr("dy", 3.5)
+      .attr("dx", 5.5)
+      .text(function(d) { return d.name; });
+
+  // Transition nodes to their new position.
+  nodeEnter.transition()
+      .duration(duration)
+      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
+      .style("opacity", 1);
+
+  node.transition()
+      .duration(duration)
+      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
+      .style("opacity", 1)
+    .select("rect")
+      .style("fill", color);
+
+  // Transition exiting nodes to the parent's new position.
+  node.exit().transition()
+      .duration(duration)
+      .attr("transform", function(d) { return "translate(" + source.y + "," + source.x + ")"; })
+      .style("opacity", 1e-6)
+      .remove();
+
+  // Update the links…
+  var link = svg.selectAll("path.link")
+      .data(tree.links(nodes), function(d) { return d.target.id; });
+
+  // Enter any new links at the parent's previous position.
+  link.enter().insert("path", "g")
+      .attr("class", "link")
+      .attr("d", function(d) {
+        var o = {x: source.x0, y: source.y0};
+        return diagonal({source: o, target: o});
+      })
+    .transition()
+      .duration(duration)
+      .attr("d", diagonal);
+
+  // Transition links to their new position.
+  link.transition()
+      .duration(duration)
+      .attr("d", diagonal);
+
+  // Transition exiting nodes to the parent's new position.
+  link.exit().transition()
+      .duration(duration)
+      .attr("d", function(d) {
+        var o = {x: source.x, y: source.y};
+        return diagonal({source: o, target: o});
+      })
+      .remove();
+
+  // Stash the old positions for transition.
+  nodes.forEach(function(d) {
+    d.x0 = d.x;
+    d.y0 = d.y;
+  });
+}
+
+// Toggle children on click.
+function click(d) {
+  if (d.children) {
+    d._children = d.children;
+    d.children = null;
+  } else {
+    d.children = d._children;
+    d._children = null;
+  }
+  update(d);
+}
+
+function color(d) {
+  return d._children ? "#3182bd" : d.children ? "#c6dbef" : "#fd8d3c";
+}
 
   });
 
