i dont even know anymore

--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@ var svg = d3.select("#graph4").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-jsonTest.x0 = 0;
-  jsonTest.y0 = 0;
-  update(root = jsonTest, "#graph4 > svg");
+task4Data.x0 = 0;
+  task4Data.y0 = 0;
+  update(root = task4Data, "#graph4 > svg");
 
 
     //Task 5 presentation
